tests/NormalTests/paczka1/fuzzy1/18995287.err
Error in line 3: SKSq5rGF7 A900 45,2
Error in line 9: SKSq5rGF7 S85 4,5
Error in line 8: DrPLzm14kTJ S85 72,8
Error in line 11: SKSq5rGF7 A900 0,5
Error in line 17: NBL0Sug A900 84,1
Error in line 10: NBnL0Sug S85 16,4
Error in line 19: A5QtVIY4 A928 71,1
Error in line 32: A928 S85 80,5
Error in line 35: Bh5wC80OR A513 58,3
